; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_dump_single_list.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_dump_single_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@MAXINT = common dso_local global i32 0, align 4
@global_dump_mod = common dso_local global i32 0, align 4
@global_dump_rem = common dso_local global i32 0, align 4
@new_total_entries = common dso_local global i32 0, align 4
@global_dump_fl = common dso_local global i32 0, align 4
@M_tot_entries = common dso_local global i32 0, align 4
@tree_write_object_id = common dso_local global i32 0, align 4
@in_tree = common dso_local global i32 0, align 4
@array_write_object_id = common dso_local global i32 0, align 4
@in_array = common dso_local global i32 0, align 4
@OTree = common dso_local global i32 0, align 4
@tree_write_object_id_indirect = common dso_local global i32 0, align 4
@array_write_object_id_indirect = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dump_single_list(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = ptrtoint i32* %10 to i32
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @MAXINT, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %79

16:                                               ; preds = %1
  %17 = load i32, i32* @global_dump_mod, align 4
  %18 = load i32, i32* %5, align 4
  %19 = srem i32 %18, %17
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @global_dump_rem, align 4
  %22 = icmp ne i32 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %16
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* @global_dump_rem, align 4
  %26 = sub nsw i32 0, %25
  %27 = icmp ne i32 %24, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %79

29:                                               ; preds = %23, %16
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %31 = call i32 @unpack_metafile_pointers(%struct.TYPE_6__* %30)
  store i32 0, i32* @new_total_entries, align 4
  %32 = load i32, i32* @global_dump_fl, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %52, label %34

34:                                               ; preds = %29
  %35 = load i32, i32* @M_tot_entries, align 4
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = add nsw i32 %35, %40
  store i32 %41, i32* %6, align 4
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load i32*, i32** %43, align 8
  %45 = call i32 @writeout_list_id(i32* %44)
  %46 = load i32, i32* %6, align 4
  %47 = call i32 @writeout_int(i32 %46)
  %48 = load i32, i32* @tree_write_object_id, align 4
  store i32 %48, i32* @in_tree, align 4
  %49 = load i32, i32* @array_write_object_id, align 4
  store i32 %49, i32* @in_array, align 4
  %50 = load i32, i32* @MAXINT, align 4
  %51 = call i32 @listree_get_range(i32* @OTree, i32 0, i32 %50)
  br label %73

52:                                               ; preds = %29
  %53 = load i32, i32* @global_dump_fl, align 4
  %54 = and i32 %53, 7
  store i32 %54, i32* %7, align 4
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @metafile_get_sublist_size(i32 %55)
  store i32 %56, i32* %6, align 4
  %57 = load i32, i32* %6, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %60, label %59

59:                                               ; preds = %52
  store i32 0, i32* %2, align 4
  br label %79

60:                                               ; preds = %52
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 0
  %63 = load i32*, i32** %62, align 8
  %64 = call i32 @writeout_list_id(i32* %63)
  %65 = load i32, i32* %6, align 4
  %66 = call i32 @writeout_int(i32 %65)
  %67 = load i32, i32* @tree_write_object_id_indirect, align 4
  store i32 %67, i32* @in_tree, align 4
  %68 = load i32, i32* @array_write_object_id_indirect, align 4
  store i32 %68, i32* @in_array, align 4
  %69 = load i32, i32* %7, align 4
  %70 = call i32 @load_o_tree_sub(i32* %4, i32 %69)
  %71 = load i32, i32* @MAXINT, align 4
  %72 = call i32 @listree_get_range(i32* %4, i32 0, i32 %71)
  br label %73

73:                                               ; preds = %60, %34
  %74 = load i32, i32* %6, align 4
  %75 = load i32, i32* @new_total_entries, align 4
  %76 = icmp eq i32 %74, %75
  %77 = zext i1 %76 to i32
  %78 = call i32 @assert(i32 %77)
  store i32 1, i32* %2, align 4
  br label %79

79:                                               ; preds = %73, %59, %28, %15
  %80 = load i32, i32* %2, align 4
  ret i32 %80
}

declare dso_local i32 @unpack_metafile_pointers(%struct.TYPE_6__*) #1

declare dso_local i32 @writeout_list_id(i32*) #1

declare dso_local i32 @writeout_int(i32) #1

declare dso_local i32 @listree_get_range(i32*, i32, i32) #1

declare dso_local i32 @metafile_get_sublist_size(i32) #1

declare dso_local i32 @load_o_tree_sub(i32*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
